# django_todo

./: .gitignore  LICENSE  env.example  pyproject.toml  requirements.txt
backend/api/: permissions.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/core/: models.py
backend/static/todoapp/css/: style.css
backend/static/todoapp/css/modules/: _typography.css  _variables.css
backend/templates/: base.html  navbar.html
backend/todoapp/: apps.py  models.py  urls.py  views.py
backend/todoapp/migrations/: 0001_initial.py
backend/todoapp/templates/todoapp/: task.html  task_confirm_delete.html  task_form.html  task_list.html
backend/todoapp/tests/: test_models.py  test_views.py
backend/users/: urls.py  views.py
backend/users/templates/users/: login.html  register.html
